<resources>
    <string name="app_name">Fragment</string>
    <string name="action_settings">Settings</string>
    <string name="openFormFragment">Open Form</string>

    <string name="form_save">Save</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
    <string name="form_tag">FORMFRAG</string>
    <string name="form_frag_title">Form Fragment</string>
    <string name="info_tag">INFOFRAG</string>
    <string name="info_fragment">Info Page</string>
</resources>
